# MiniJavaCompiler

./: .gitignore  BaseNode.h  CMakeLists.txt  CompilationErrors.h  CopyLocation.h  Program.cpp  Program.h  ast.h  ast_decl.h  driver.cpp  driver.hh  error.h  location.hh  log.h  main.cpp  parser.cpp  parser.hh  parser.y  readme.md  scanner.cpp  scanner.l  test.py
Decl/: Base.h  Class.cpp  Class.h  ClassBody.cpp  ClassBody.h  ClassField.cpp  ClassField.h  ClassMember.h  ClassMethod.cpp  ClassMethod.h  MainClass.cpp  MainClass.h  ProgramBody.cpp  ProgramBody.h
Entity/: Const.hpp  Entity.h  Id.cpp  Id.h
Expr/: BinaryOp.cpp  BinaryOp.h  Call.cpp  Call.h  Const.cpp  Const.h  Expr.h  Id.cpp  Id.h  New.cpp  New.h  This.cpp  This.h  UnaryOp.cpp  UnaryOp.h  lvalue.cpp  lvalue.h  rvalue.cpp  rvalue.h
Functions/: CallFrame.cpp  CallFrame.h  CallParamList.cpp  CallParamList.h  FuncParamList.cpp  FuncParamList.h  FuncParameter.cpp  FuncParameter.h  Function.cpp  Function.h
IR/: BaseExp.h  BaseStm.h  BasicBlock.cpp  BasicBlock.h  BasicBlockScheduling.cpp  BasicBlockScheduling.h  Binop.h  CJump.h  CMakeLists.txt  Call.h  Const.h  Eseq.h  Exp.h  ExpList.cpp  ExpList.h  IRBaseNode.h  Jump.h  Mem.h  Move.h  Name.h  Register.h  Seq.h  SetLabel.h  StmList.cpp  StmList.h  TempExp.h  forward_decl.h  ir_nodes.h
IR/Visitors/: Base.h  BlockBuilder.cpp  BlockBuilder.h  CanonVisitor.cpp  CanonVisitor.h  DoubleCallElimination.cpp  DoubleCallElimination.h  Linearizer.cpp  Linearizer.h  NodeTraits.cpp  NodeTraits.h  PrintIR.cpp  PrintIR.h
IR/assembly/: InstSelection.cpp  InstSelection.h  Instr.cpp  Instr.h
IR/blocks/: Block.cpp  Block.h  Trace.cpp  Trace.h
IR/calls/: AbsMemPtr.cpp  AbsMemPtr.h  Frame.cpp  Frame.h  FrameMemPtr.cpp  FrameMemPtr.h  MemPtr.cpp  MemPtr.h  RegisterMemPtr.cpp  RegisterMemPtr.h
IR/generators/: Label.cpp  Label.h  Temp.cpp  Temp.h
IR/types/: BinaryOp.cpp  BinaryOp.h  LogicOpType.cpp  LogicOpType.h
IR/wrappers/: ExpWrapper.cpp  ExpWrapper.h  StmWrapper.cpp  StmWrapper.h  SubtreeWrapper.h
IR/wrappers/cond/: And.cpp  And.h  BaseCondWrapper.cpp  BaseCondWrapper.h  Not.cpp  Not.h  Or.cpp  Or.h  OrderRelation.cpp  OrderRelation.h
JavaExamples/: call_on_temp.java  compare.java  complex.java  fac.java  if(a).java  if_a.java  if_else.java  ifs.java  ir_test.java  local_scope.java  modified.java  mul_by_10.java  parameters.java  print_n_numbers.java  scopes.java  shadowed_modified.java  simple_call.java  two_classes.java  two_classes_simple.java  undecl_var.java
Object/: Boolean.cpp  Boolean.h  ClassObject.cpp  ClassObject.h  Integer.cpp  Integer.h  Object.cpp  Object.h  UninitObject.cpp  UninitObject.h
Stmt/: Assign.cpp  Assign.h  Call.cpp  Call.h  Cond.cpp  Cond.h  ExprStmt.cpp  ExprStmt.h  List.cpp  List.h  New.cpp  New.h  Print.cpp  Print.h  Ret.cpp  Ret.h  ScopedList.cpp  ScopedList.h  Stmt.h  VarDecl.cpp  VarDecl.h
SymbolTable/: Scope.cpp  Scope.h  ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  ScopeTree.cpp  ScopeTree.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h  VariableScope.cpp  VariableScope.h
TestOutput/: 2+2_var.dot
Type/: Bool.h  Int.h  Type.cpp  Type.h  Types.h  UserType.h  Void.h
Visitor/: Executor.cpp  Executor.h  IRTranslator.cpp  IRTranslator.h  Interpreter.cpp  Interpreter.h  PrintAST.cpp  PrintAST.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  TypeChecker.cpp  TypeChecker.h  Visitor.h
java_examples/: 2+2.java  2+2_var.java  if_else.java  interactive.java  println.java
